<resources>
    <string name="app_name">VisitU</string>
    <string name="intro_message">
    <string name="fecha_visita">Fecha de la visita :</string>
    <string name = "FechaReporte">Fecha del reporte :</string>
    <string name = "Minutos">Minutos :</string>
    <string name = "LugarVisita">Lugar visitado :</string>
    <string name = "Acompañado">Acompanyado :</string>
    <string name = "Observaciones">Observaciones :</string>
    <string name = "ProductosPromocionados">Numero de productos promocionados :</string>
    <string name = "ProductosPromocionadoss">Productos promocionados</string>
    <string name = "ProductosOfertados">Productos ofertados</string>
        <![CDATA[


            A basic sample which shows how to use SlidingTabLayout to display a custom
            ViewPager title strip which gives continuous feedback to the user when scrolling.


        ]]>
    </string>


    <string name="title_activity_login">Inicio de sesión</string>
    <string name="hint_id_login">Código de usuario o email</string>
    <string name="hint_id_password">Contraseña</string>
    <string name="btn_login">Iniciar sesión</string>
    <string name="btn_cancel">Salir</string>

    <string name="txt_coste">Coste: </string>

    <string name="txt_select_ruta">Seleccione una ruta</string>
    <string name="txt_lista_citas">Seleccione una cita</string>
    <string name="txt_titulo_ruta">Mis rutas</string>
</resources>
